--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "type": "module",
   "keywords": [],
-  "author": "",
+  "author": "JoneChen",
   "license": "ISC",
   "description": "",
   "peerDependencies": {
