--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
+  },
+  "dependencies": {
+    "glob": "^11.0.0"
   }
 }
