--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "cssnano": "^7.0.6",
+    "glob": "^11.0.0",
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
